# FunTerm

./: .clang-format  .cmake-format.py  .gitignore  CMakeLists.txt  README.md  build_appimage.sh  prepare_vte.sh
.github/workflows/: cmake.yml  cmake_2004.yml  cmake_2110.yml
doc/: dev.md
patches/: vte291-cntnr-precmd-preexec-scroll.patch
res/: fun.xjbcode.funterm.gschema.xml  funterm.conf  funterm.desktop  funterm.desktop.in  funterm.glade  headerbar.glade  match_dialog.glade  preference_dialog.glade  style.css
res/colorschemes/: solorized_dark  solorized_light
res/language/zh_CN/LC_MESSAGES/: messages.mo  messages.po
scripts/git_hooks/: pre-commit  project_commit_msg_template
scripts/git_hooks/pre-commit.d/: clangformat_check.sh  cmakeformat_check.sh  cmakelint_check.sh
src/: FunTerm.cpp  PanedContainer.cpp  PanedContainer.h  Preference.cpp  Preference.h  Tab.cpp  Tab.h  TerminalSession.cpp  TerminalSession.h  TitleEntry.h  common.h  common_log.h  funterm_config.h.in  glade_code_gen  nautilus_extension.cpp  nautilus_extension.h
